# CalculatorProject

./: CMakeLists.txt  TestHarness.cpp
CppUTest/src/CppUTest/: TestHarness.cpp
src/: calculator.cpp
test/: calculator_test.cpp
